# StreamlitCodebaseChat

./: .replit  app.py  pyproject.toml  styles.css
attached_assets/: Pasted-INFO-main-Initializing-PineconeService-INFO-pinecone-plugin-interface-logging-Discovering-subpac-1739475049446.txt  Pasted-import-asyncio-import-sys-import-logging-import-json-from-typing-import-List-Optional-Dict-Any--1739474744852.txt
src/: app.py
src/config/: settings.py
src/models/: types.py
src/services/: __init__.py  base.py  openai_service.py  pinecone_service.py  retrieval_service.py
src/services/ai/: base.py  registry.py
src/services/ai/providers/: openai_provider.py
src/services/ai/tools/: knowledge_base.py
src/ui/: __init__.py  components.py
src/utils/: __init__.py  logging.py
