[project]
name = "repl-nix-workspace"
version = "0.1.0"
description = "AI Chat Interface with Vector Search"
requires-python = ">=3.11"
dependencies = [
    "langchain-openai>=0.3.5",
    "langchain-pinecone>=0.2.3",
    "openai>=1.62.0",
    "pinecone>=5.4.2",
    "pinecone-client>=4.1.2",
    "streamlit>=1.42.0",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["src*"]
namespaces = false
